Fixed profile-btn alignment
even with nav-menu

--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -427,7 +427,9 @@ header{
     left: 20px;
     top: 50%;
     transform: translateY(-50%);
-    display: block;
+    display: flex;
+    align-items: center;
+    height: 100px;
     z-index: 3;
   }
   .nav-button {
@@ -440,12 +442,13 @@ header{
     z-index: 3;
   }
   .nav-profile-btn {
-    display: flex !important;
     position: absolute;
-    left: 50%;
+    right: 20px;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateY(-50%);
+    display: flex;
     align-items: center;
+    height: 100px;
     z-index: 3;
   }
   #profileSidebar.sidebar {
